# jupyter-scrolling-transcript

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: teleprompter_demo.ipynb
src/scrolling_transcript/: __init__.py  widget.py
